manifests/wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: site-wordpress
  namespace: site-wordpress
spec:
  rules:
    - host: www.site-wordpress.com
      http:
        paths:
          - backend:
              serviceName: wordpress
              servicePort: 80
            path: /
  tls:
      - hosts:
          - www.site-wordpress.com
        secretName: site-wordpress-tls
